ui_devtools: optimize view tree updating logic

Currently when view tree is updating, we visit each view in this subtree
and for each view we rebuild the subtree with that view as root and
recurse. This causes very complicated view tree, e.g. ChromeOS launcher
to flood the HTTP websocket server and overrun the buffer.

Now we avoid rebuilding subtree if we already visited it, and only send
view tree update on the root view which covers the whole subtree.

Bug: 894107
Test: locally build and run devtools with ChromeOS launcher
Change-Id: I53c87813729eb4983ce613628ae2b83e86adcd30
Reviewed-on: https://chromium-review.googlesource.com/c/1279357
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Xiaohui Chen <xiaohuic@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600094}