components/ui_devtools/dom_agent.h
@@ -6,6 +6,11 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef COMPONENTS_UI_DEVTOOLS_DOM_AGENT_H_
 #define COMPONENTS_UI_DEVTOOLS_DOM_AGENT_H_
 
+#include <memory>
+#include <string>
+#include <unordered_map>
+#include <vector>
+
 #include "base/observer_list.h"
 #include "components/ui_devtools/DOM.h"
 #include "components/ui_devtools/devtools_base_agent.h"
@@ -45,7 +50,7 @@ class UI_DEVTOOLS_EXPORT DOMAgent
   void AddObserver(DOMAgentObserver* observer);
   void RemoveObserver(DOMAgentObserver* observer);
   UIElement* GetElementFromNodeId(int node_id) const;
-  UIElement* element_root() const { return element_root_.get(); };
+  UIElement* element_root() const { return element_root_.get(); }
 
   // Returns parent id of the element with id |node_id|. Returns 0 if parent
   // does not exist.
@@ -73,7 +78,6 @@ class UI_DEVTOOLS_EXPORT DOMAgent
   void RemoveDomNode(UIElement* ui_element);
   void Reset();
 
-  bool is_building_tree_ = false;
   std::unique_ptr<UIElement> element_root_;
   std::unordered_map<int, UIElement*> node_id_to_ui_element_;
 
